[workspace]

[package]
name = "bbl2csv"
version = "0.1.0"
description = "Ergonomic cli for parsing BetaFlight blackbox logs into csv"
repository = "https://github.com/blackbox-log/bbl2csv"
readme = "README.md"
categories = ["aerospace::drones", "aerospace::unmanned-aerial-vehicles", "command-line-utilities", "parser-implementations"]
keywords = ["blackbox_decode", "betaflight", "blackbox"]
publish = false

license = "GPL-3.0-only"
edition = "2021"
rust-version = "1.81"

[[bin]]
path = "src/main.rs"
name = "bbl2csv"

[dependencies]
exitcode = "1.1.2"
lexopt = "0.3.0"
mimalloc = "0.1.43"
rayon = "1.10.0"
tracing = { version = "0.1.40", default-features = false, features = ["release_max_level_debug"] }

[dependencies.blackbox-log]
version = "0.4.3"
# git = "https://github.com/blackbox-log/blackbox-log"
# path = "../blackbox-log"

[dependencies.tracing-subscriber]
version = "0.3.18"
default-features = false
features = ["smallvec", "fmt", "ansi", "std"]

[target.'cfg(windows)'.dependencies]
output_vt100 = "0.1.3"

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true
